fix: address visibility issue of tooltip text caused by recent changes in ChatGPT (class name change)
- Adjusted the class name of tooltip text to ensure visibility following recent changes in ChatGPT

Changes summary:
    - Resolved the visibility issue of tooltip text by updating the class name to align with recent changes in ChatGPT.

--- a/src/sass/elements/_tooltips.scss
+++ b/src/sass/elements/_tooltips.scss
@@ -8,18 +8,17 @@ div[data-radix-popper-content-wrapper]:has([role='tooltip']) {
 	div {
 		background-color: var(--c-bg-tooltip) !important;
 		padding: var(--p-tooltips) !important;
-		box-shadow: var(--box-shadow-contextmenu) !important;
 	}
 }
 
 /* === TOOLTIPS text color === */
 html.light div[data-radix-popper-content-wrapper]:has([role='tooltip']) {
-	[class*='text-white'] {
+	[class*='text-'] {
 		color: var(--c-txt) !important;
 	}
 }
 html.dark div[data-radix-popper-content-wrapper]:has([role='tooltip']) {
-	[class*='text-white'] {
+	[class*='text-'] {
 		color: var(--c-on-accent) !important;
 	}
 }
